--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,7 +5,7 @@ android-minSdk = "21"
 android-jvm = "17"
 aboutlibraries = "11.2.3"
 accompanist = "0.37.0"
-androidGradlePlugin = "8.7.3"
+androidGradlePlugin = "8.8.0"
 androidMaterial = "1.12.0"
 androidxActivity = "1.9.3"
 androidxAppCompat = "1.7.0"
@@ -34,6 +34,7 @@ nextlib = "0.8.4"
 room = "2.6.1"
 timber = "5.0.1"
 universalChardet = "2.5.0"
+junit = "1.2.1"
 
 
 [libraries]
@@ -85,6 +86,8 @@ kotlinx-coroutines-guava = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-
 kotlinx-coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "kotlinxCoroutines" }
 kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "timber" }
+androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junit" }
+androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
 
 [plugins]
 aboutLibraries = { id = "com.mikepenz.aboutlibraries.plugin", version.ref = "aboutlibraries" }
